--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import { redirect } from 'astro:middleware';
-
-redirect('/en');
 ---
+
+<!-- Redirect burada çalışmaz. Bunun yerine middleware.ts içinde yönlendirme yapılmalı -->
