--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,12 @@
 ---
+// src/pages/index.astro
 ---
 
-<!-- Redirect burada çalışmaz. Bunun yerine middleware.ts içinde yönlendirme yapılmalı -->
+<html lang="en">
+  <head>
+    <meta http-equiv="refresh" content="0; url=/personal-website-astro/en/" />
+  </head>
+  <body>
+    <p>Redirecting to <a href="/personal-website-astro/en/">English version</a>...</p>
+  </body>
+</html>
